--- a/python_interview.ipynb
+++ b/python_interview.ipynb
@@ -595,8 +595,345 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "e4fe3945",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "var = 10 + 5\n",
+    "print (var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "0aa91104",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function var at 0x00000239EAA7E4C0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def var(y):\n",
+    "    return y*10\n",
+    "print (var)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "135d09e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var = \"Hello\"\n",
+    "print (var)\n",
+    "40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee3f3a53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "def func1():\n",
+    "x=50\n",
+    "print x\n",
+    "\n",
+    "def func2():\n",
+    "print x\n",
+    "\n",
+    "x=25\n",
+    "def func3(p):\n",
+    "if p<10:\n",
+    "x=2\n",
+    "print x\n",
+    "\n",
+    "func1()\n",
+    "func2()\n",
+    "func3(20)\n",
+    "func3(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4e91350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=5\n",
+    "def func1():\n",
+    "x=2\n",
+    "x=x+1\n",
+    "def func2():\n",
+    "global x\n",
+    "x=x+1\n",
+    "print x\n",
+    "func1()\n",
+    "print x\n",
+    "func2()\n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf048048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FindDisc():\n",
+    "    def__init__(self,Icode = 0,price,qty,netprice,discount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "80403acc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass:\n",
+    "    class_variable = 0\n",
+    "    \n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "        \n",
+    "    def instance_method(self):\n",
+    "        print(f\"Instance method called with x = {self.x}\")\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def class_method(cls):\n",
+    "        cls.class_variable += 1\n",
+    "        print(f\"Class method called, class_variable = {cls.class_variable}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9cccbabf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= MyClass(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "17b39ddf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.class_variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "58756607",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instance method called with x = 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.instance_method()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "26fe1b77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Animal(ABC):\n",
+    "    @abstractmethod\n",
+    "    def speak(self):\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7aa1efce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Alchemist\n",
+      "To Kill a Mockingbird\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Book:\n",
+    "    def __init__(self, title, author):\n",
+    "        self.title = title\n",
+    "        self.author = author\n",
+    "\n",
+    "class Library:\n",
+    "    def __init__(self):\n",
+    "        self.books = []\n",
+    "\n",
+    "    def add_book(self, book):\n",
+    "        self.books.append(book)\n",
+    "\n",
+    "    def remove_book(self, book):\n",
+    "        self.books.remove(book)\n",
+    "\n",
+    "book1 = Book(\"The Alchemist\", \"Paulo Coelho\")\n",
+    "book2 = Book(\"To Kill a Mockingbird\", \"Harper Lee\")\n",
+    "\n",
+    "library = Library()\n",
+    "library.add_book(book1)\n",
+    "library.add_book(book2)\n",
+    "\n",
+    "for book in library.books:\n",
+    "    print(book.title)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f605a106",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = Book"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ca827f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              '__init__': <function __main__.Book.__init__(self, title, author)>,\n",
+       "              '__dict__': <attribute '__dict__' of 'Book' objects>,\n",
+       "              '__weakref__': <attribute '__weakref__' of 'Book' objects>,\n",
+       "              '__doc__': None})"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4e32e754",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db30b2fe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -604,7 +941,204 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135d09e0",
+   "id": "ec0f78ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ccac1c0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Book:\n",
+    "    def __init__(self, title, author):\n",
+    "        self.title = title\n",
+    "        self.author = author"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "44ef565e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ponniyan_selvan' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [36]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m a \u001b[38;5;241m=\u001b[39m Book(\u001b[43mponniyan_selvan\u001b[49m, part2)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ponniyan_selvan' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a = Book(ponniyan_selvan, part2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "aa3bed6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[__main__.Book, object]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.mro()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b1aff15f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4045496785.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [34]\u001b[1;36m\u001b[0m\n\u001b[1;33m    a(ponniyan selvan, part2)\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "a(ponniyan selvan, part2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4a55087c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Test:\n",
+    "    @staticmethod\n",
+    "    def Displaytest():\n",
+    "        print(\"This is a static method\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d637fb78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a static method\n"
+     ]
+    }
+   ],
+   "source": [
+    "Test.Displaytest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "baceaafa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Test:\n",
+    "    @staticmethod\n",
+    "    def square(x):\n",
+    "        Test.result = x**x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "5afd2161",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Test.square(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "521dec62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3125"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Test.result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "fd84f9bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "add() missing 1 required positional argument: 'c'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [50]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m a \u001b[38;5;241m+\u001b[39m b \u001b[38;5;241m+\u001b[39m c\n\u001b[0;32m      8\u001b[0m calc \u001b[38;5;241m=\u001b[39m Calculator()\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcalc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m) \u001b[38;5;66;03m# Output: TypeError: add() missing 1 required positional argument: 'c'\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(calc\u001b[38;5;241m.\u001b[39madd(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m))\n",
+      "\u001b[1;31mTypeError\u001b[0m: add() missing 1 required positional argument: 'c'"
+     ]
+    }
+   ],
+   "source": [
+    "class Calculator:\n",
+    "    def add(self, a, b):\n",
+    "        return a + b\n",
+    "\n",
+    "    def add(self, a, b, c):\n",
+    "        return a + b + c\n",
+    "\n",
+    "calc = Calculator()\n",
+    "print(calc.add(2, 3)) # Output: TypeError: add() missing 1 required positional argument: 'c'\n",
+    "print(calc.add(2, 3, 4)) # Output: 9\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f43f6426",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77db3797",
    "metadata": {},
    "outputs": [],
    "source": []
