--- a/python_interview.ipynb
+++ b/python_interview.ipynb
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e4fe3945",
+   "id": "1694540c",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee3f3a53",
+   "id": "f199f21f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4e91350",
+   "id": "d81dfb35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf048048",
+   "id": "3edcca7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "80403acc",
+   "id": "34111479",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9cccbabf",
+   "id": "769fb62a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "17b39ddf",
+   "id": "dab61cfd",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "58756607",
+   "id": "bb352d0c",
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "26fe1b77",
+   "id": "aac0b996",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7aa1efce",
+   "id": "b4e32c2e",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f605a106",
+   "id": "ecc692d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ca827f02",
+   "id": "cdee83fe",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "4e32e754",
+   "id": "e8f8a494",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db30b2fe",
+   "id": "e16f8edc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec0f78ef",
+   "id": "898505e2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ccac1c0a",
+   "id": "c4ccf89b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "44ef565e",
+   "id": "3ce13314",
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "aa3bed6b",
+   "id": "96433a1c",
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b1aff15f",
+   "id": "e76272d1",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4a55087c",
+   "id": "1452f95e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d637fb78",
+   "id": "93f8f4c1",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "baceaafa",
+   "id": "a38651cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5afd2161",
+   "id": "9c67f55c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "521dec62",
+   "id": "b2e10edd",
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "fd84f9bf",
+   "id": "36e740f4",
    "metadata": {},
    "outputs": [
     {
@@ -1129,19 +1129,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f43f6426",
+   "execution_count": 57,
+   "id": "11a06528",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class cricket:\n",
+    "    def __init__(self,name, runs,wickets):\n",
+    "        self.name = name\n",
+    "        self.runs = runs\n",
+    "        self.wickets = wickets\n",
+    "        print(f'{self.name} scores {self.runs} runs and took {self.wickets} wickets')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "77db3797",
+   "execution_count": 58,
+   "id": "838e371c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arun scores 100 runs and took 5 wickets\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = cricket('arun',100,5)"
+   ]
   }
  ],
  "metadata": {
